# ecl-execution-compact-layer

./: .gitignore  ADAPTER_CONTRACT_v0_1.md  AGENTS.md  ARXIV_JSS_SUBMISSION_STATUS.md  CHANGELOG.md  CHANGE_POLICY.md  CITATION.cff  COMPATIBILITY_MODEL_v0_1.md  CONTRIBUTING.md  Dockerfile  ECL_EXTERNAL_RECOGNITION_v0_1.md  ECL_GATEWAY_SPEC_v0_1.md  ECL_vs_existing_systems.md  FINAL_SUBMISSION_FREEZE.md  Makefile  PUBLICATION_ACTIVATION_FINAL_REPORT.md  PUBLICATION_RISK_FINAL_REPORT.md  README.md  ROADMAP.md  SPEC.md  agent-index.json  pyproject.toml
release/v0.1/: INTEGRITY_REPORT_v0_1.json  LICENSE  PUBLICATION_ACTIVATION_STATUS_v0_1.md  README.md  RELEASE_MANIFEST_v0_1.json  ZENODO_DOI_ACTION_STATUS_v0_1.md  ZENODO_NEW_VERSION_CANDIDATE_MANIFEST_v0_1.json  ZENODO_TECH_REPORT_ATTACHMENT_DECISION_v0_1.md  pyproject.toml  zenodo.json  zenodo_deposit_ready.json
release/v0.1/demo/: replay_demo.py
release/v0.1/docs/api/: ECL_API_REFERENCE_v0_1.md
release/v0.1/docs/joss/: REVIEWER_QUICKSTART_v0_1.md
release/v0.1/ecl/: __init__.py
release/v0.1/ecl/adapters/: __init__.py  langchain.py  openai_agents.py
release/v0.1/mcp/: ecl_server_stub.py  ecl_tool_spec.json
release/v0.1/paper/: ECL_PAPER_EVIDENCE_v0_1.json  ECL_PAPER_v0_1.md  PAPER_COMPLETION_REPORT_v0_1.md
release/v0.1/paper/final_audit/: GOAL_COMPLETION_AUDIT_v0_1.json  GOAL_COMPLETION_AUDIT_v0_1.md
release/v0.1/paper/joss/: AUTHOR_METADATA_TEMPLATE_v0_1.json  ECL_DEVELOPMENT_EVIDENCE_LAYER_v0_1.md  paper.bib  paper.md  (+6 more)
release/v0.1/schemas/: ecl-execution-compact-layer.schema.json
release/v0.1/sdk/: README.md  demo_langchain.py  demo_openai.py
(+258 files in other folders)
