[project]
name = "ecl-execution-compact-layer"
version = "0.1.0"
description = "Deterministic local Execution Compact Layer schema, validator, adapters, and audit artifact builder."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.0",
]
license = { text = "MIT" }
authors = [
  { name = "Bin Zhang" },
]
keywords = [
  "agent systems",
  "determinism",
  "execution IR",
  "replay",
  "trace analysis",
]

[project.urls]
Homepage = "https://github.com/joy7758/ecl-execution-compact-layer"
Repository = "https://github.com/joy7758/ecl-execution-compact-layer"
Issues = "https://github.com/joy7758/ecl-execution-compact-layer/issues"
Changelog = "https://github.com/joy7758/ecl-execution-compact-layer/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ecl*", "sdk*", "external*"]

[tool.ecl]
schema = "schemas/ecl-execution-compact-layer.schema.json"
artifacts = "out/ecl_artifacts"
state = "state/ecl_goal_state.json"
log = "logs/ecl_goal.log"
